# tech-writer-agent

./: .gitignore  README.md  file_browser_agent.py  gemma_chatbot.py  gitignore_detailed_results.json  gitignore_test.py  gitignore_tester.py  hello.py  landscapehub_analysis.md  landscapehub_architecture_analysis.md  multi_agent_tech_writer.py  ollama-repro.sh  openai_tool_calling_demo.py  output.txt  prompt-checkpoint.txt  prompt.txt  pyproject.toml  refine-tech-writer-prompt.py  run_aws_tech_writer.sh  run_original_tech_writer.sh  shared_state.py  tech-writer-agent-eval.py  tech-writer-conceptual-flow.html  tech-writer-from-scratch-openrouter.py  tech-writer-from-scratch-react-only-openai.py  tech-writer-from-scratch-react-only.py  tech-writer-from-scratch.py  tech-writer-from-scratch.sh  tech-writer-langgraph-react-template-grok.py  test_model_reproducibility.py  test_openrouter_agent.py  test_step_limit.py  test_tools.py  test_ts_detection.py  visualisation-2.html  visualisation-4.html  visualisation-6.html  visualisation-8.html
agents/: coordinator.py  researcher.py.bak  writer.py
backup/: architecture.prompt.v2.txt
docs/: overview.md  visualisation-3.html  visualisation-5.html  visualisation-7.html  visualisation.html
example-output/: 20250502-100426-reflexion-gpt-4o-mini.md  20250502-1128-comparison-react-reflexion.md  20250502-third-agent.md  20250503-001423-react-gemini-2.0-flash.md  comparison-20250502-174233.md  comparison-20250502-175435.md  comparison-20250502-175925.md  comparison-20250502-180215.md  comparison-20250502-180545.md  comparison-20250502-180732.md  comparison-20250502-180933.md  comparison-20250502-181028.md  comparison-20250502-181137.md  comparison-20250502-181224.md  comparison-20250502-181415.md  comparison-20250502-181540.md  comparison-20250502-181706.md  comparison-20250502-182154.md  comparison-20250502-182604.md  comparison-20250502-182929.md  (+49 more)
rust/: Cargo.toml
rust/src/: main.rs  prompts.rs  tools.rs  types.rs  utils.rs
rust/src/agents/: base_agent.rs  mod.rs  react_agent.rs  reflexion_agent.rs
(+92 files in other folders)
