[project]
name = "tech-writer-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=0.3.45",
    "langchain>=0.3.20",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.14",
    "ollama>=0.4.7",
    "openai>=1.66.3",
    "python-dotenv>=1.0.1",
    "pathspec==0.11.2",
    "binaryornot==0.4.4"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "pytest-cov==4.1.0",
    "black==23.7.0",
    "flake8==6.1.0",
    "mypy==1.5.1",
]

[tool.pytest.ini_options]
testpaths = ["test_tools.py"]
python_files = "test_*.py"
