[package]
name = "tech-writer-agent"
version = "0.1.0"
edition = "2021"
description = "A Rust implementation of the tech-writer-agent for codebase analysis"
authors = ["Julian Birch"]

[dependencies]
# CLI argument parsing
clap = { version = "4.4", features = ["derive"] }

# Environment variable management
dotenv = "0.15"

# OpenAI API client
async-openai = "0.16"

# Async runtime
tokio = { version = "1.32", features = ["full"] }

# File system operations
walkdir = "2.4"
ignore = "0.4"
is_executable = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# Regular expressions
regex = "1.9"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Utility
once_cell = "1.18"

# Mathematical expression evaluation
meval = "0.2"
